# FastAPI_Pytest_PostgreSQL_GitHubActions-CI-

./: .gitignore  Dockerfile  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_postgres/: app.py  database.py  schema.py  security.py
fast_postgres/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 6ea25dc08b31_create_todos_table.py  af3eb6bbf94a_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
